--- a/index.html
+++ b/index.html
@@ -7,22 +7,19 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="login-screen" class="active">
+  <div id="user-select-screen" class="active">
     <div class="login-container card">
-      <h2>Login</h2>
-      <form id="loginForm">
-        <input type="text" id="username" placeholder="Nome de usuário" required>
-        <div class="password-field">
-          <input type="password" id="password" placeholder="Código de acesso" required>
-          <button type="button" class="toggle-password" onclick="togglePasswordVisibility()">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
-              <path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"/>
-              <line x1="1" y1="1" x2="23" y2="23"/>
-            </svg>
-          </button>
-        </div>
-        <button type="submit">Entrar</button>
-      </form>
+      <h2>Selecione o Usuário</h2>
+      <div class="user-selection">
+        <button class="user-btn" onclick="selectUser('camilowilliam0@gmail.com', '6363')">
+          <div class="user-avatar">CD</div>
+          <span>Camilo Duvane</span>
+        </button>
+        <button class="user-btn" onclick="selectUser('cintiajaime11@gmail.com', '4321')">
+          <div class="user-avatar">CM</div>
+          <span>Cíntia Mucumbi</span>
+        </button>
+      </div>
     </div>
   </div>
 
@@ -146,7 +143,8 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-analytics.js";
-    import { getDatabase, ref, set, get, remove } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-database.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
+    import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyD5gjkbcUrcnRVU_5pdFfjGsfKTNVi99fY",
@@ -161,15 +159,18 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
-    const database = getDatabase(app);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
-    // Make Firebase instances and functions available globally
-    window.firebaseApp = app;
-    window.firebaseDatabase = database;
-    window.firebaseRef = ref;
-    window.firebaseSet = set;
-    window.firebaseGet = get;
-    window.firebaseRemove = remove;
+    // Make Firebase instances available globally
+    window.firebaseAuth = auth;
+    window.firebaseDb = db;
+    window.firebaseCollection = collection;
+    window.firebaseAddDoc = addDoc;
+    window.firebaseGetDocs = getDocs;
+    window.firebaseDeleteDoc = deleteDoc;
+    window.firebaseDoc = doc;
+    window.firebaseUpdateDoc = updateDoc;
   </script>
 
   <script src="app.js"></script>
