--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Firebase SDKs -->
   <script type="module" src="https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/11.3.1/firebase-database.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.3.1/firebase-analytics.js"></script>
   <script type="module" src="firebase-config.js"></script>
   <script type="module" src="app.js"></script>
